--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,9 @@ background-color: rgba(173, 216, 230, 0.4); */
     border-bottom: 2px solid black;
     
 }
+.column1, .column2{
+  width: 48%;
+}
 @media only screen and (max-width:414px) {
   html {
     font-size: 16px;
@@ -173,9 +176,50 @@ background-color: rgba(173, 216, 230, 0.4); */
   padding-bottom: 10px;
 }
 .container2 .cases {
-  width: 100%;
+  width: 48%;
   font-family: Arial, Helvetica, sans-serif;
 }
   .images-entrada {
     flex-direction: columns
   }
+
+  .columna-cases {
+    display: flex;
+    justify-content: space-around;
+    width: 48%;
+
+  }
+  .columna-cases2 {
+    display: flex;
+    justify-content: space-around;
+    width: 48%;
+  }
+
+  .caseColumn{
+    display: flex;
+    justify-content: space-between;
+  }
+  a:active {
+    font-family: helvetica bold;
+  } 
+  .next-project {
+    font-family: "MinionPro-Bold";
+
+    color: black;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size: 48px;
+    }
+.next-project a {
+  color: black;
+  text-decoration: none;
+}
+    .bodycopy-entrada{
+      font-family: "Helvetica";
+      font-style: normal;
+      font-weight: regular;
+      font-size: 18px;
+      line-height: 22px;
+      margin-block-start: 10%;
+      padding-right: 10px;
+    }
